--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.3",
 		"autoprefixer": "^10.4.14",
+		"bcrypt": "^5.1.0",
 		"chalk": "^5.3.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
