--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon index.js",
-		"tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css --watch"
+		"tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css --watch",
+		"start": "node index.js"
 	},
 	"keywords": [],
 	"author": "",
