--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js",
 		"dev": "nodemon index.js",
-		"tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css --watch",
-		"start": "node index.js"
+		"tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css --watch"
 	},
 	"keywords": [],
 	"author": "",
